Adjust banner content gap to prevent overhang

--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -53,7 +53,7 @@ main {
   grid-column: 1;
   display: flex;
   flex-wrap: wrap;
-  gap: 10%;
+  gap: 2%;
   padding: MIN(6.25vw, 3em);
   justify-content: space-between;
 }
@@ -86,7 +86,7 @@ main {
   min-height: 200px;
   max-width: 95%;
   margin: 0 auto;
-  margin-top: 3em;
+  // margin-top: 3em;
     
   @media screen and (min-width: 833px) {
     margin: 0;
